# lazylog

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md
migrations/: 1.sql
src/: main.rs
src/app/: controller.rs  env.rs  mod.rs
src/app/errors/: mod.rs
src/app/models/: api_error.rs  app_error.rs  mod.rs  sql_state_codes.rs
src/app/util/: argon2.rs  hasher.rs  mod.rs  sqlx.rs
src/auth/: controller.rs  mod.rs  service.rs
src/auth/dtos/: login_dto.rs  register_dto.rs
src/auth/jwt/models/: claims.rs
src/auth/jwt/util/: mod.rs
src/auth/models/: access_info.rs
src/devices/: service.rs
src/devices/dtos/: mod.rs  refresh_device_dto.rs
src/devices/models/: device.rs
src/media/: controller.rs  service.rs
src/media/dtos/: create_media_dto.rs  get_media_filter_dto.rs
src/media/models/: media.rs
src/media/services/: dalle.rs
src/media/util/: dalle.rs  mod.rs
src/posts/: controller.rs  errors.rs  mod.rs  service.rs
src/posts/dtos/: create_post_dto.rs  edit_post_dto.rs  get_posts_filter_dto.rs  mod.rs
src/posts/models/: post.rs
src/users/: controller.rs  errors.rs  mod.rs  service.rs
src/users/dtos/: edit_user_dto.rs  get_users_filter_dto.rs
src/users/errors/: mod.rs
src/users/models/: user.rs
