[package]
name = "lazylog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.5.13", features = ["headers"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["cors"] }

sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "json" ] }
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
argon2 = "0.4.1"
rand = "0.8.5"
validator = { version = "0.16.0", features = ["derive"] }

[dependencies.uuid]
version = "1.2.1"
features = [
 "v4"
]
